vNEXT (in development)

 * Added SourcedEvent interface for events that have a user source attached
 * Added ChannelJoinFailed event

v0.10.3

 * Fix issue parsing CTCPs when the content contained multi-byte chars
 * Fixed multiple issues when receiving malformed input from the server:
   * Invalid server-time tags are now ignored and the current time used
   * PRIVMSGs, NOTICEs and TOPICs with no target/message are now ignored
   * CAPs with invalid or missing arguments are now ignored
   * Better handling for duplicate JOIN messages
   * Ignored messages are now logged more consistently

v0.10.2

 * Fix handling of multiple long lines sometimes dropping part of the line
 * Support lines with 8191 bytes of tags, as allowed by the message-tags spec
 * Fix a few more instances of occasional ConcurrentModificationExceptions

v0.10.1

 * Added NickChangeFailed event for when nicknames are in use, banned, etc
 * Added sendPart method
 * Fix occasional ConcurrentModificationException when adding state
 * (Internal) Moved message processors into their own package
 * (Internal) Added ExperimentalIrcClient interface for features not yet ready for release

v0.10.0

 * Batch start and end events are no longer included in BatchReceived events
 * Batches now expose complete metadata from their start event
 * Added support for labelled-replies capability and label message tags
 * Added support for message-tags capability after it moved from draft
 * Added new methods for sending raw lines to the IRC server
   * send(tagMap(...), command, arguments) replaces send(line)
   * send(command, arguments) is available if no tags are to be sent
   * the line is built automatically (with spaces/' :' added appropriately)
   * send(line) is deprecated and will be removed after v1.0.0
 * Add 'alwaysEchoMessages' behaviour that makes it easier to deal with servers
   that don't support the echo message capability
 * Added TargetedEvent, a subclass of IrcEvent, for all events that are